// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kitchen-sink Layout (Flexbox) snapshots > Spacer > should push content to opposite ends of a row 1`] = `
"┌──────────────────────┐
│◀ left         right ▶│
└──────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > alignItems > should render alignItems=center with height=5 1`] = `
"┌──────────────┐
│              │
│▪▪▪           │
│              │
└──────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > alignItems > should render alignItems=flex-end with height=5 1`] = `
"┌──────────────┐
│              │
│              │
│▪▪▪           │
└──────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > alignItems > should render alignItems=flex-start with height=5 1`] = `
"┌──────────────┐
│▪▪▪           │
│              │
│              │
└──────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > flexDirection > should lay out children in a column 1`] = `
"first
second
third"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > flexDirection > should lay out children in a row (default) 1`] = `"A B C"`;

exports[`kitchen-sink Layout (Flexbox) snapshots > flexGrow > should distribute remaining space according to flexGrow 1`] = `
"┌────────────────────┐┌──────┐
│grow                ││fixed │
└────────────────────┘└──────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > gap spacing > should apply column gap=1 between rows 1`] = `
"┌──────────┐
│Row 1     │
└──────────┘

┌──────────┐
│Row 2     │
└──────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > gap spacing > should apply row gap=3 between columns 1`] = `
"┌──────┐   ┌──────┐   ┌──────┐
│A     │   │B     │   │C     │
└──────┘   └──────┘   └──────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > justifyContent > should render justifyContent=center correctly 1`] = `
"┌────────────────────────┐
│           ▪▪▪          │
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > justifyContent > should render justifyContent=flex-end correctly 1`] = `
"┌────────────────────────┐
│                     ▪▪▪│
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > justifyContent > should render justifyContent=flex-start correctly 1`] = `
"┌────────────────────────┐
│▪▪▪                     │
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > justifyContent > should render justifyContent=space-around correctly 1`] = `
"┌────────────────────────┐
│    ▪       ▪       ▪   │
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > justifyContent > should render justifyContent=space-between correctly 1`] = `
"┌────────────────────────┐
│▪           ▪          ▪│
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > nested borders > should render nested box with different border styles 1`] = `
"╭──────────────────────╮
│                      │
│ ┌────────┐           │
│ │ nested │           │
│ └────────┘           │
│                      │
╰──────────────────────╯"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > padding and margin > should render box with margin 1`] = `
"   ┌────────┐
   │margin  │
   └────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > padding and margin > should render box with padding 1`] = `
"┌──────────────────┐
│                  │
│  padded          │
│                  │
└──────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > should render the full layout section at 80x30 (narrower terminal) 1`] = `
"━━ Layout (Flexbox) ━━━━━━━━━━━━━━━━━━━━

justifyContent               alignItems         Spacer / nesting

┌────────────────────────┐   ┌──────────────┐   ┌──────────────────────┐
│▪▪▪                     │   │▪▪▪           │   │◀ left         right ▶│
└────────────────────────┘   │              │   └──────────────────────┘
                             │              │
┌────────────────────────┐   └──────────────┘   ╭──────────────────────╮
│           ▪▪▪          │                      │                      │
└────────────────────────┘   ┌──────────────┐   │ ┌────────┐           │
                             │              │   │ │ nested │           │
┌────────────────────────┐   │▪▪▪           │   │ └────────┘           │
│                     ▪▪▪│   │              │   │                      │
└────────────────────────┘   └──────────────┘   ╰──────────────────────╯

┌────────────────────────┐   ┌──────────────┐   ┌────┐ ┌────┐ ┌────┐
│▪           ▪          ▪│   │              │   └────┘ │  2 │ │    │
└────────────────────────┘   │              │          └────┘ │  3 │
                             │▪▪▪           │                 └────┘
┌────────────────────────┐   └──────────────┘
│    ▪       ▪       ▪   │
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > should render the full layout section at 130x40 1`] = `
"━━ Layout (Flexbox) ━━━━━━━━━━━━━━━━━━━━

justifyContent               alignItems         Spacer / nesting

┌────────────────────────┐   ┌──────────────┐   ┌──────────────────────┐
│▪▪▪                     │   │▪▪▪           │   │◀ left         right ▶│
└────────────────────────┘   │              │   └──────────────────────┘
                             │              │
┌────────────────────────┐   └──────────────┘   ╭──────────────────────╮
│           ▪▪▪          │                      │                      │
└────────────────────────┘   ┌──────────────┐   │ ┌────────┐           │
                             │              │   │ │ nested │           │
┌────────────────────────┐   │▪▪▪           │   │ └────────┘           │
│                     ▪▪▪│   │              │   │                      │
└────────────────────────┘   └──────────────┘   ╰──────────────────────╯

┌────────────────────────┐   ┌──────────────┐   ┌────┐ ┌────┐ ┌────┐
│▪           ▪          ▪│   │              │   └────┘ │  2 │ │    │
└────────────────────────┘   │              │          └────┘ │  3 │
                             │▪▪▪           │                 └────┘
┌────────────────────────┐   └──────────────┘
│    ▪       ▪       ▪   │
└────────────────────────┘"
`;

exports[`kitchen-sink Layout (Flexbox) snapshots > staircase boxes > should render boxes with increasing heights in a row 1`] = `
"┌────┐ ┌────┐ ┌────┐
└────┘ │  2 │ │    │
       └────┘ │  3 │
              └────┘"
`;
